--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Hello World!</title>
+    <title>SpotifyGenius v0.01!</title>
 
     
   </head>
@@ -13,14 +13,17 @@
         document.getElementById("lyrics").innerHTML = lyrics;
       });
     </script>
-    <h1>Hello World!</h1>
+    <h1>SpotifyGenius v0.01!</h1>
     <!-- All of the Node.js APIs are available in this renderer process. -->
-    We are using node <script>document.write(process.versions.node)</script>,
-    Chromium <script>document.write(process.versions.chrome)</script>,
-    and Electron <script>document.write(process.versions.electron)</script>.
 
     <div id="lyrics">
     </div>
+
+
+      We are using node <script>document.write(process.versions.node)</script>,
+      Chromium <script>document.write(process.versions.chrome)</script>,
+      and Electron <script>document.write(process.versions.electron)</script>
+
   </body>
 
   <script>
