--- a/index.html
+++ b/index.html
@@ -8,14 +8,18 @@
   </head>
   <body>
     <script>
-      require('electron').ipcRenderer.on('lyrics', function(event, lyrics){
-        console.log(lyrics);
-        document.getElementById("lyrics").innerHTML = lyrics;
+      require('electron').ipcRenderer.on('lyrics', function(event, song){
+        song = JSON.parse(song);
+        console.log(song);
+        document.getElementById("title").innerHTML = song.title;
+        document.getElementById("artist").innerHTML = song.artistName;
+        document.getElementById("lyrics").innerHTML = song.lyrics;
       });
     </script>
     <h1>SpotifyGenius v0.01!</h1>
     <!-- All of the Node.js APIs are available in this renderer process. -->
-
+    <h2 id="artist"></h2>
+    <h2 id="title"></h2>
     <div id="lyrics">
     </div>
 
